package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "ssl_util",
    hdrs = ["ssl_util.h"],
    include_prefix = "tink/internal",
    deps = ["@boringssl//:crypto"],
)

cc_library(
    name = "keyset_wrapper",
    hdrs = ["keyset_wrapper.h"],
    include_prefix = "tink/internal",
    deps = [
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    include_prefix = "tink/internal",
    deps = ["@com_google_absl//absl/strings"],
)

cc_library(
    name = "test_file_util",
    testonly = 1,
    srcs = [
        "test_file_util.cc",
        "test_file_util_bazel.cc",
    ],
    hdrs = ["test_file_util.h"],
    include_prefix = "tink/internal",
    deps = [
        "//tink/util:status",
        "//tink/util:test_util",
        "@bazel_tools//tools/cpp/runfiles",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "keyset_wrapper_impl",
    hdrs = ["keyset_wrapper_impl.h"],
    include_prefix = "tink/internal",
    deps = [
        ":key_info",
        ":keyset_wrapper",
        "//tink:primitive_set",
        "//tink:primitive_wrapper",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "ssl_unique_ptr",
    hdrs = ["ssl_unique_ptr.h"],
    include_prefix = "tink/internal",
    deps = ["@boringssl//:crypto"],
)

cc_library(
    name = "key_info",
    srcs = ["key_info.cc"],
    hdrs = ["key_info.h"],
    include_prefix = "tink/internal",
    deps = ["//proto:tink_cc_proto"],
)

cc_library(
    name = "registry_impl",
    srcs = ["registry_impl.cc"],
    hdrs = ["registry_impl.h"],
    include_prefix = "tink/internal",
    deps = [
        ":fips_utils",
        ":keyset_wrapper",
        ":keyset_wrapper_impl",
        "//tink:catalogue",
        "//tink:core/key_manager_impl",
        "//tink:core/key_type_manager",
        "//tink:core/private_key_manager_impl",
        "//tink:core/private_key_type_manager",
        "//tink:key_manager",
        "//tink:primitive_set",
        "//tink:primitive_wrapper",
        "//tink/monitoring",
        "//proto:tink_cc_proto",
        "//tink/util:errors",
        "//tink/util:protobuf_helper",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:validation",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:optional",
    ],
)

config_setting(
    name = "fips_enabled",
    flag_values = {"//tink/config:use_only_fips": "True"},
    visibility = ["//visibility:public"],
)

cc_library(
    name = "fips_utils",
    srcs = ["fips_utils.cc"],
    hdrs = ["fips_utils.h"],
    defines = select({
        "fips_enabled": ["TINK_USE_ONLY_FIPS"],
        "//conditions:default": [],
    }),
    include_prefix = "tink/internal",
    deps = [
        "//tink/util:status",
        "@boringssl//:crypto",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
    ],
)

cc_library(
    name = "err_util",
    srcs = ["err_util.cc"],
    hdrs = ["err_util.h"],
    include_prefix = "tink/internal",
    deps = ["@boringssl//:crypto"],
)

cc_library(
    name = "bn_util",
    srcs = ["bn_util.cc"],
    hdrs = ["bn_util.h"],
    include_prefix = "tink/internal",
    deps = [
        ":ssl_unique_ptr",
        "//tink/subtle:subtle_util",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "rsa_util",
    srcs = ["rsa_util.cc"],
    hdrs = ["rsa_util.h"],
    include_prefix = "tink/internal",
    deps = [
        ":bn_util",
        ":err_util",
        ":ssl_unique_ptr",
        ":ssl_util",
        "//tink/config:tink_fips",
        "//tink/subtle:common_enums",
        "//tink/util:errors",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "ec_util",
    srcs = ["ec_util.cc"],
    hdrs = ["ec_util.h"],
    include_prefix = "tink/internal",
    deps = [
        ":bn_util",
        ":err_util",
        ":fips_utils",
        ":ssl_unique_ptr",
        "//tink/subtle:common_enums",
        "//tink/subtle:random",
        "//tink/subtle:subtle_util",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "md_util",
    srcs = ["md_util.cc"],
    hdrs = ["md_util.h"],
    include_prefix = "tink/internal",
    deps = [
        ":err_util",
        ":util",
        "//tink/subtle:common_enums",
        "//tink/subtle:subtle_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "util_test",
    srcs = ["util_test.cc"],
    deps = [
        ":util",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "keyset_wrapper_impl_test",
    srcs = ["keyset_wrapper_impl_test.cc"],
    deps = [
        ":keyset_wrapper_impl",
        "//tink:primitive_set",
        "//tink:primitive_wrapper",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "key_info_test",
    srcs = ["key_info_test.cc"],
    deps = [
        ":key_info",
        "//proto:tink_cc_proto",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "registry_impl_test",
    size = "small",
    srcs = ["registry_impl_test.cc"],
    tags = ["fips"],
    deps = [
        "//tink:aead",
        "//tink:catalogue",
        "//tink:core/key_manager_impl",
        "//tink:core/key_type_manager",
        "//tink:crypto_format",
        "//tink:keyset_manager",
        "//tink:registry",
        "//tink/aead:aead_wrapper",
        "//tink/aead:aes_gcm_key_manager",
        "//tink/config:tink_fips",
        "//tink/hybrid:ecies_aead_hkdf_private_key_manager",
        "//tink/hybrid:ecies_aead_hkdf_public_key_manager",
        "//tink/monitoring",
        "//tink/monitoring:monitoring_client_mocks",
        "//proto:aes_ctr_hmac_aead_cc_proto",
        "//proto:aes_gcm_cc_proto",
        "//proto:common_cc_proto",
        "//proto:ecdsa_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/subtle:aes_gcm_boringssl",
        "//tink/subtle:random",
        "//tink/util:istream_input_stream",
        "//tink/util:protobuf_helper",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_keyset_handle",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@boringssl//:crypto",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "fips_utils_test",
    size = "small",
    srcs = ["fips_utils_test.cc"],
    tags = ["fips"],
    deps = [
        ":fips_utils",
        "//tink/util:status",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "err_util_test",
    size = "small",
    srcs = ["err_util_test.cc"],
    deps = [
        ":err_util",
        "@boringssl//:crypto",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "bn_util_test",
    size = "small",
    srcs = ["bn_util_test.cc"],
    deps = [
        ":bn_util",
        ":ssl_unique_ptr",
        "//tink/util:secret_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "rsa_util_test",
    size = "large",
    srcs = ["rsa_util_test.cc"],
    deps = [
        ":bn_util",
        ":rsa_util",
        ":ssl_unique_ptr",
        "//tink/subtle:random",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "ec_util_test",
    size = "large",
    srcs = ["ec_util_test.cc"],
    data = [
        "@wycheproof//testvectors:ecdh",
        "@wycheproof//testvectors:ecdsa_webcrypto",
        "@wycheproof//testvectors:eddsa",
    ],
    deps = [
        ":bn_util",
        ":ec_util",
        ":fips_utils",
        ":ssl_unique_ptr",
        ":ssl_util",
        "//tink/subtle:common_enums",
        "//tink/subtle:subtle_util",
        "//tink/subtle:wycheproof_util",
        "//tink/util:secret_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "md_util_test",
    size = "small",
    srcs = ["md_util_test.cc"],
    deps = [
        ":md_util",
        "//tink/subtle:common_enums",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "aes_util",
    srcs = ["aes_util.cc"],
    hdrs = ["aes_util.h"],
    include_prefix = "tink/internal",
    deps = [
        ":util",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

cc_test(
    name = "aes_util_test",
    size = "small",
    srcs = ["aes_util_test.cc"],
    deps = [
        ":aes_util",
        "//tink/subtle:subtle_util",
        "//tink/util:secret_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "monitoring_util",
    hdrs = ["monitoring_util.h"],
    include_prefix = "tink/internal",
    deps = [
        ":key_status_util",
        "//tink:key_status",
        "//tink:primitive_set",
        "//tink/monitoring",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "monitoring_util_test",
    srcs = ["monitoring_util_test.cc"],
    deps = [
        ":monitoring_util",
        "//tink:key_status",
        "//tink:primitive_set",
        "//tink/monitoring",
        "//proto:tink_cc_proto",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "serialization",
    hdrs = ["serialization.h"],
    include_prefix = "tink/internal",
    deps = ["@com_google_absl//absl/strings"],
)

cc_library(
    name = "proto_parameters_serialization",
    srcs = ["proto_parameters_serialization.cc"],
    hdrs = ["proto_parameters_serialization.h"],
    include_prefix = "tink/internal",
    deps = [
        ":serialization",
        ":util",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "proto_parameters_serialization_test",
    srcs = ["proto_parameters_serialization_test.cc"],
    deps = [
        ":proto_parameters_serialization",
        "//proto:test_proto_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "proto_key_serialization",
    srcs = ["proto_key_serialization.cc"],
    hdrs = ["proto_key_serialization.h"],
    include_prefix = "tink/internal",
    deps = [
        ":serialization",
        ":util",
        "//tink:restricted_data",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
    ],
)

cc_test(
    name = "proto_key_serialization_test",
    srcs = ["proto_key_serialization_test.cc"],
    deps = [
        ":proto_key_serialization",
        "//tink:insecure_secret_key_access",
        "//tink:restricted_data",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "legacy_proto_parameters",
    srcs = ["legacy_proto_parameters.cc"],
    hdrs = ["legacy_proto_parameters.h"],
    include_prefix = "tink/internal",
    deps = [
        ":proto_parameters_serialization",
        "//tink:parameters",
        "//proto:tink_cc_proto",
    ],
)

cc_test(
    name = "legacy_proto_parameters_test",
    srcs = ["legacy_proto_parameters_test.cc"],
    deps = [
        ":legacy_proto_parameters",
        ":proto_parameters_serialization",
        "//proto:test_proto_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "legacy_proto_key",
    srcs = ["legacy_proto_key.cc"],
    hdrs = ["legacy_proto_key.h"],
    include_prefix = "tink/internal",
    deps = [
        ":proto_key_serialization",
        "//tink:key",
        "//tink:secret_key_access_token",
        "//proto:tink_cc_proto",
        "//tink/util:status",
        "//tink/util:statusor",
    ],
)

cc_test(
    name = "legacy_proto_key_test",
    srcs = ["legacy_proto_key_test.cc"],
    deps = [
        ":legacy_proto_key",
        ":proto_key_serialization",
        "//tink:insecure_secret_key_access",
        "//tink:restricted_data",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "parser_index",
    hdrs = ["parser_index.h"],
    include_prefix = "tink/internal",
    deps = [":serialization"],
)

cc_test(
    name = "parser_index_test",
    srcs = ["parser_index_test.cc"],
    deps = [
        ":parser_index",
        ":serialization",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "serializer_index",
    hdrs = ["serializer_index.h"],
    include_prefix = "tink/internal",
    deps = [
        ":serialization",
        "//tink:key",
        "//tink:parameters",
    ],
)

cc_test(
    name = "serializer_index_test",
    srcs = ["serializer_index_test.cc"],
    deps = [
        ":serialization",
        ":serializer_index",
        "//tink:key",
        "//tink:parameters",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "parameters_parser",
    hdrs = ["parameters_parser.h"],
    include_prefix = "tink/internal",
    deps = [
        ":parser_index",
        ":serialization",
        "//tink:parameters",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "parameters_parser_test",
    srcs = ["parameters_parser_test.cc"],
    deps = [
        ":parameters_parser",
        ":parser_index",
        ":serialization",
        ":serialization_test_util",
        "//tink:parameters",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "parameters_serializer",
    hdrs = ["parameters_serializer.h"],
    include_prefix = "tink/internal",
    deps = [
        ":serialization",
        ":serializer_index",
        "//tink:parameters",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "parameters_serializer_test",
    srcs = ["parameters_serializer_test.cc"],
    deps = [
        ":parameters_serializer",
        ":serialization",
        ":serialization_test_util",
        ":serializer_index",
        "//tink:parameters",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "key_parser",
    hdrs = ["key_parser.h"],
    include_prefix = "tink/internal",
    deps = [
        ":parser_index",
        ":serialization",
        "//tink:key",
        "//tink:secret_key_access_token",
        "//tink/util:statusor",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "key_parser_test",
    srcs = ["key_parser_test.cc"],
    deps = [
        ":key_parser",
        ":parser_index",
        ":serialization",
        ":serialization_test_util",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "key_serializer",
    hdrs = ["key_serializer.h"],
    include_prefix = "tink/internal",
    deps = [
        ":serialization",
        ":serializer_index",
        "//tink:key",
        "//tink:secret_key_access_token",
        "//tink/util:statusor",
        "@com_google_absl//absl/functional:function_ref",
    ],
)

cc_test(
    name = "key_serializer_test",
    srcs = ["key_serializer_test.cc"],
    deps = [
        ":key_serializer",
        ":serialization",
        ":serialization_test_util",
        ":serializer_index",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:secret_key_access_token",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "key_status_util",
    srcs = ["key_status_util.cc"],
    hdrs = ["key_status_util.h"],
    include_prefix = "tink/internal",
    deps = [
        "//tink:key_status",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
    ],
)

cc_test(
    name = "key_status_util_test",
    srcs = ["key_status_util_test.cc"],
    deps = [
        ":key_status_util",
        "//tink:key_status",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "keyset_handle_builder_entry",
    srcs = ["keyset_handle_builder_entry.cc"],
    hdrs = ["keyset_handle_builder_entry.h"],
    include_prefix = "tink/internal",
    deps = [
        ":key_status_util",
        ":legacy_proto_key",
        ":legacy_proto_parameters",
        ":proto_key_serialization",
        ":proto_parameters_serialization",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:key_status",
        "//tink:parameters",
        "//tink:registry",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_test(
    name = "keyset_handle_builder_entry_test",
    srcs = ["keyset_handle_builder_entry_test.cc"],
    deps = [
        ":keyset_handle_builder_entry",
        ":legacy_proto_key",
        ":legacy_proto_parameters",
        ":proto_key_serialization",
        ":proto_parameters_serialization",
        "//tink:insecure_secret_key_access",
        "//tink:keyset_handle",
        "//tink:keyset_handle_builder",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/config:tink_config",
        "//tink/mac:aes_cmac_key",
        "//tink/mac:aes_cmac_parameters",
        "//tink/mac:mac_key_templates",
        "//proto:tink_cc_proto",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "serialization_registry",
    srcs = ["serialization_registry.cc"],
    hdrs = ["serialization_registry.h"],
    include_prefix = "tink/internal",
    deps = [
        ":key_parser",
        ":key_serializer",
        ":parameters_parser",
        ":parameters_serializer",
        ":parser_index",
        ":serializer_index",
        "//tink:insecure_secret_key_access",
        "//tink/util:status",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "serialization_registry_test",
    srcs = ["serialization_registry_test.cc"],
    deps = [
        ":key_parser",
        ":key_serializer",
        ":parameters_parser",
        ":parameters_serializer",
        ":serialization_registry",
        ":serialization_test_util",
        "//tink:key",
        "//tink:parameters",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "serialization_test_util",
    testonly = 1,
    hdrs = ["serialization_test_util.h"],
    include_prefix = "tink/internal",
    deps = [
        ":serialization",
        "//tink:key",
        "//tink:parameters",
        "//tink:secret_key_access_token",
        "//tink/util:statusor",
    ],
)

cc_test(
    name = "serialization_test_util_test",
    srcs = ["serialization_test_util_test.cc"],
    deps = [
        ":serialization_test_util",
        "//tink:insecure_secret_key_access",
        "//tink/util:test_matchers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "test_random_access_stream",
    testonly = 1,
    srcs = ["test_random_access_stream.cc"],
    hdrs = ["test_random_access_stream.h"],
    include_prefix = "tink/internal",
    deps = [
        "//tink:random_access_stream",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "test_random_access_stream_test",
    srcs = ["test_random_access_stream_test.cc"],
    deps = [
        ":test_random_access_stream",
        "//tink/subtle:random",
        "//tink/util:buffer",
        "//tink/util:status",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)
